# fmcd

./: .gitignore  Cargo.toml  curl.md  flake.nix  justfile  mprocs.yaml
.github/workflows/: release-plz.yml
scripts/: e2e-common.sh  e2e-ln-receive.sh  e2e-onchain-deposit.sh  e2e-smoke.sh  mprocs-nix-gateway.sh
src/: state.rs  state_tests.rs
src/api/resolvers/: payment.rs
src/api/rest/admin/: backup.rs  capabilities.rs  config.rs  mod.rs  operations.rs
src/api/rest/ln/: gateways.rs  mod.rs  status.rs  stream.rs
src/core/: mod.rs
src/core/multimint/: client.rs  mod.rs  tests.rs
src/core/operations/: mod.rs  payment.rs  store.rs
src/core/operations/tests/: mod.rs  payment_tests.rs  store_tests.rs
src/core/services/: balance_monitor.rs  client_lifecycle.rs  deposit_monitor.rs  lightning.rs  mod.rs  payment_lifecycle.rs
src/database/: instrumented.rs
src/error/: tests.rs
src/events/: mod.rs
src/events/handlers/: logging.rs  metrics.rs
src/events/tests/: event_bus_tests.rs
src/metrics/: collectors.rs
src/observability/: logging.rs  mod.rs  sanitization.rs  test_integration.rs
src/observability/tests/: correlation_tests.rs
src/webhooks/: notifier.rs
src/webhooks/tests/: notifier_tests.rs
tests/: auth_tests.rs  config_tests.rs
tests/integration/: phase2_observability_tests.rs
