[package]
name = "fmcd"
description = "A fedimint client daemon for server side applications to hold, use, and manage Bitcoin"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/minmoto/fmcd"
keywords = ["fedimint", "bitcoin", "lightning", "ecash"]
license = "MIT"
readme = "README.md"
authors = ["Minmo Developers"]

[lib]
name = "fmcd"
path = "src/lib.rs"

[[bin]]
name = "fmcd"
path = "src/bin/main.rs"

[dependencies]
# Core dependencies (used by both library and binary)
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5.0"
bitcoin = "0.32.7"
time = { version = "0.3.25", features = ["formatting"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
rand = "0.8.5"
bip39 = "2.1.0"
hex = "0.4.3"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1"

# Fedimint dependencies (core)
fedimint-api-client = "0.9.0"
fedimint-client = "0.9.0"
fedimint-core = "0.9.0"
fedimint-wallet-client = "0.9.0"
fedimint-mint-client = "0.9.0"
fedimint-ln-client = "0.9.0"
fedimint-ln-common = "0.9.0"
fedimint-lnv2-client = "0.9.0"
fedimint-rocksdb = "0.9.0"
fedimint-bip39 = "0.9.0"
fedimint-derive-secret = "0.9.0"

# API dependencies (only used by binary)
axum = { version = "0.7.1", features = ["json", "ws"], optional = true }
axum-macros = { version = "0.4.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "fmt"], optional = true }
tracing-appender = { version = "0.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }
async-utility = { version = "0.2.0", optional = true }
tower-http = { version = "0.5.2", features = ["cors", "auth", "trace"], optional = true }
itertools = { version = "0.12.0", optional = true }
lnurl-rs = { version = "0.9.0", features = ["async"], default-features = false, optional = true }
reqwest = { version = "0.12.3", features = [
  "json",
  "rustls-tls",
], default-features = false, optional = true }
futures-util = { version = "0.3.30", optional = true }
clap = { version = "3", features = ["derive", "env"], optional = true }
toml = { version = "0.8", optional = true }
metrics = { version = "0.23", default-features = false, optional = true }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false, optional = true }
console = { version = "0.15", optional = true }

[features]
default = ["api"]
api = [
  "axum",
  "axum-macros",
  "dotenv",
  "tracing-subscriber",
  "tracing-appender",
  "lazy_static",
  "async-utility",
  "tower-http",
  "itertools",
  "lnurl-rs",
  "reqwest",
  "futures-util",
  "clap",
  "toml",
  "metrics",
  "metrics-exporter-prometheus",
  "console"
]

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.4", features = ["util"] }
tracing-test = "0.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
